--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   </body>
 </html>
