--- a/project/AvatarGenerator.html
+++ b/project/AvatarGenerator.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/portfolio/favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@200;300&display=swap" rel="stylesheet">
-    <title>Martina Fernandez Suarez</title>
-    <script type="module" crossorigin src="/portfolio/assets/Project-ba89f723.js"></script>
-    <link rel="stylesheet" href="/portfolio/assets/Project-0f7aed51.css">
+    <title>Avatar Generator</title>
+    <script type="module" crossorigin src="../assets/Project-ba89f723.js"></script>
+    <link rel="stylesheet" href="../assets/Project-0f7aed51.css">
   </head>
   <body>
     <div id="app"></div>
