--- a/surprise.html
+++ b/surprise.html
@@ -2,15 +2,15 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/portfolio/favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@200;300&display=swap" rel="stylesheet">
     <title>Martina Fernandez Suarez</title>
-    <script type="module" crossorigin src="/portfolio/assets/Surprise-b5436a0a.js"></script>
-    <link rel="stylesheet" href="/portfolio/assets/Surprise-131abd26.css">
+    <script type="module" crossorigin src="../assets/Surprise-b5436a0a.js"></script>
+    <link rel="stylesheet" href="../assets/Surprise-131abd26.css">
   </head>
   <body>
     <div id="app"></div>
