--- a/project/TypoAttack.html
+++ b/project/TypoAttack.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@200;300&display=swap" rel="stylesheet">
     <title>TypoAttack</title>
-    <script type="module" crossorigin src="../assets/Project-ba89f723.js"></script>
-    <link rel="stylesheet" href="../assets/Project-0f7aed51.css">
+    <script type="module" crossorigin src="/../assets/Project-ba89f723.js"></script>
+    <link rel="stylesheet" href="/../assets/Project-0f7aed51.css">
   </head>
   <body>
     <div id="app"></div>
