--- a/project/TypoAttack.html
+++ b/project/TypoAttack.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/portfolio/assets/Project-0f7aed51.css">
   </head>
   <body>
-    <div id="app"></div>
+    <main id="inicio"></main>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   </body>
