--- a/surprise.html
+++ b/surprise.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <section class="focus-in">
-        <h2>build test</h2>
+        <h2>build test2</h2>
           <h1>¿Qué cuerpo celeste preferís?</h1>
           <div>
               <input value="moon" type="radio" name="planet" id="moon">
